--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
   </head>
   <body>
 
-    <h1>My First Website</h1>
-    <p>My first paragraph.</p>
-    <h3>I'm Exicted to learn<h3>
-
+    <h1>Mozilla is cool</h1>
+    <img src="images/firefox-icon.png" alt="My test image">
+    <a href="https://www.mozilla.org/en-US/about/manifesto/">Mozilla Manifesto</a>
   </body>
 </html>
